--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ contact_note: >
 google_analytics: # your Google Analytics measurement ID (format: G-XXXXXXXXXX)
 panelbear_analytics: # panelbear analytics site ID (format: XXXXXXXXX)
 
-google_site_verification: # your google-site-verification ID (Google Search Console)
+google_site_verification: 9MCi0z7h5H3oOlfknyKwHgJQNAsL4WwpQ53W75ccCeI # your google-site-verification ID (Google Search Console)
 bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 
 # -----------------------------------------------------------------------------
@@ -303,7 +303,7 @@ filtered_bibtex_keywords:
   ]
 
 # Maximum number of authors to be shown for each publication (more authors are visible on click)
-max_author_limit: 3 # leave blank to always show all authors
+max_author_limit: 4 # leave blank to always show all authors
 more_authors_animation_delay: 10 # more authors are revealed on click using animation; smaller delay means faster animation
 
 # -----------------------------------------------------------------------------
@@ -352,7 +352,7 @@ jekyll-diagrams:
 enable_google_analytics: false # enables google analytics
 enable_panelbear_analytics: false # enables panelbear analytics
 enable_google_verification: true # enables google site verification
-enable_bing_verification: true # enables bing site verification
+enable_bing_verification: false # enables bing site verification
 enable_masonry: true # enables automatic project cards arangement
 enable_math: true # enables math typesetting (uses MathJax)
 enable_tooltips:
