--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: mMirmohammadi # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: # your Twitter handle
+twitter_username: MehrshadMi27729 # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: mmirmohammadi # your LinkedIn user name
 telegram_username: # your Telegram user name
